# differential-formula

./: .gitignore  Cargo.toml  Dockerfile  Formula.sln  LICENSE  README.md
CommandLine/: CommandLine.csproj  Program.cs
Core/: Constants.cs  Core.csproj  Rational.cs
Core/Compiler/: Compiler.cs
Core/Parser/: Constants.cs  ExprVisitor.cs  TermsVisitor.cs
Core/Parser/Grammar/: Formula.g4
Core/Parser/Nodes/: BinaryExpr.cs  Cnst.cs  Comprehension.cs  ConDecl.cs  Conjunction.cs  Constraint.cs  DecimalLiteral.cs  Disjunction.cs  DomConformsExpr.cs  DomRuleExpr.cs  DomTypeExpr.cs  Domain.cs  DomainSentences.cs  DomainSig.cs  EnumCnst.cs  EnumList.cs  Field.cs  Fields.cs  FormulaRule.cs  FuncCallExpr.cs  FuncTermList.cs  INode.cs  Id.cs  Model.cs  ModelFact.cs  ModelFactList.cs  ModelFacts.cs  Module.cs  ModuleList.cs  Node.cs  PrimitiveExpr.cs  Program.cs  Range.cs  RealLiteral.cs  RegularTypeDecl.cs  RelConstr.cs  Rule.cs  SetComprehension.cs  StringLiteral.cs  Term.cs  (+6 more)
Core/Parser/Nodes/Base/: INode.cs  Node.cs  NodeType.cs  Nodes.cs
Core/Parser/Nodes/Symbols/: SymbolTable.cs
Core/Parser/Nodes/Symbols/SymbolTypes/: BaseOpSymb.cs  BaseSortSymb.cs  ConSymb.cs  MapSymb.cs
Core/Samples/: HA.4ml  graph.4ml  integerSwap.4ml
Core/Symbols/: Symbol.cs  SymbolTable.cs
Core/Symbols/SymbolTypes/: BaseCnstSymb.cs  BaseSortSymb.cs  UnnSortSymb.cs  UnnSymb.cs  UserCnstSymb.cs  UserSortSymb.cs  UserSymbol.cs
Core/Terms/: Term.cs
PyFormula/: .gitignore  compiler.py  main.py  requirements.txt
PyFormula/benchmarks/: model_generator.py  non-recursive-domain.4ml
PyFormula/benchmarks/templates/: graphs.4ml  non-recursive-domain.4ml
PyFormula/executer/: binding.py  constraint.py  index.py  relation.py  rule.py  term.py
PyFormula/executer/ddengine/: Cargo.toml  setup.py
PyFormula/executer/ddengine/ddengine/: __init__.py
PyFormula/executer/ddengine/src/: lib.rs
PyFormula/executer/modules/: domain.py  model.py  union.py
PyFormula/grammar/: Formula.g4  visitor.py
PyFormula/grammar/nodes/: aggregation.py  constraint.py  domain.py  enum.py  expression.py  model.py  module.py  rule.py  term.py  type.py
PyFormula/modules/: constraint.py  relation.py  rule.py  term.py
PyFormula/parser/: visitor.py
PyFormula/samples/: dfa.4ml  graphs.4ml  test.4ml  weighted_graph.4ml
PyFormula/test/: test.py
PyFormula/tests/: test_compiler.py  test_relation.py  test_rule.py  test_term.py
PyFormula/tests/core/: test_compiler.py  test_relation.py  test_rule.py  test_term.py
PyFormula/tests/ddengine/: test_ddengine.py
PyFormula/tests/parser/: test_parser.py
PyFormula/utils/: data_structures.py  utils.py
TestSuite/: AntlerParserTests.cs
archive/executable_noninteractive/: CommandLine.deps.json  graph.4ml
archive/samples/: g.4ml  graphs.4ml  h.4ml  maze.4ml  sorting.4ml  test.4ml
ddlog_examples/formula/: formula.dl
ddlog_examples/formula2ddlog/: benchmark.sh  ddlog.dl  formula.dl  formula2ddlog.dl  list.dl  operators.dl  run.sh
ddlog_examples/formula2ddlog/benchmark/: benchmark.sh  graph.sh
ddlog_examples/formula2ddlog/benchmark/graph/: graph.4ml  graph_template.4ml
ddlog_examples/formula2ddlog/benchmark/graph/graph_lib/benches/: graph_computation.rs
ddlog_examples/formula2ddlog/benchmark/graph/graph_lib/src/: lib.rs  main.rs
ddlog_examples/formula2ddlog/benchmark/testcases/: g1.4ml  g2.4ml
ddlog_examples/formula2ddlog/examples/graph/: graph.4ml  graph.dl
ddlog_examples/formula2ddlog/examples/graph/graph_lib/: Cargo.toml
ddlog_examples/formula2ddlog/examples/graph/graph_lib/benches/: graph_computation.rs
ddlog_examples/formula2ddlog/examples/graph/graph_lib/src/: lib.rs  main.rs
ddlog_examples/formula2ddlog/formula2ddlog_lib/: Cargo.toml
ddlog_examples/formula2ddlog/formula2ddlog_lib/src/: main.rs  p.4ml
ddlog_examples/formula2ddlog/langs/: ddlog.dl  formula.dl
ddlog_examples/formula2ddlog/langs/lib/: list.dl  operators.dl
ddlog_examples/graph/: graph.dl
ddlog_examples/graph/graph_lib/src/: main.rs
ddlog_examples/graph1/: graph.dl  run.sh
ddlog_examples/graph1/graph_lib/: Cargo.toml
ddlog_examples/graph2/: graph2.dl
differential-formula/: Cargo.toml
differential-formula/src/: constraint.rs  engine.rs  expression.rs  lib.rs  parser.rs  rule.rs  term.rs  type_system.rs  util.rs
differential-formula/tests/: test_engine.rs  test_term.rs
differential-formula/tests/samples/: SocialNetwork.4ml
examples/: test.rs  transitive.rs
src/: constraint.rs  converter.rs  engine.rs  expression.rs  join.rs  lib.rs  main.rs  module.rs  parser.rs  rule.rs  term.rs  type_system.rs  util.rs
src/expression/: mod.rs  setcompre.rs
src/expression/expr/: arith_expr.rs  base_expr.rs  mod.rs
src/parser/: ast.rs  combinator.rs  mod.rs
src/term/: atomic.rs  generic.rs  indexed_term.rs  matches.rs  mod.rs  native_term.rs
src/util/: map.rs  mod.rs  wrapper.rs
symbolic/: sorting.py  toy_examples.py  z3_testing.py
tests/: benchmark_transitive.rs  test_engine.rs  test_term.rs
tests/samples/: SocialNetwork.4ml  g.4ml  graphs.4ml  sorting.4ml
tests/testcase/: cmd.txt  domains.txt  models.txt  p0.4ml  p1.4ml  p2.4ml  programs.txt  rules.txt  transformations.txt
