[package]
name = "differential_formula"
version = "0.1.1"
authors = ["Qishen Zhang <qishen23@gmail.com>"]
edition = "2018"
description = "Incremental Formal Modeling Using Logic Programming and Analysis"
license = "MIT"

exclude = [
    "tests/samples/CommandLine.exe",
    "tests/samples/CommandLine.exe.config",
    "tests/samples/Core.dll"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
bimap = "0.6.1"

# Enable `bincode` feature to use serde instead of Abomonation for serialization.
# timely = { version = "0.11.1", features = ["bincode"] } 
# timely = { path = "../timely-dataflow/timely/", features = ["bincode"] }
# timely = { path = "../timely-dataflow/timely/" }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", features = ["bincode"] }
# timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
timely_sort = "0.1.6"

# Internally differential-dataflow use timely as a dependency and they have to be at the same version.
# differential-dataflow = "0.11.0"
differential-dataflow = { path = "../differential-dataflow" }
# differential-dataflow = { git = "https://github.com/qishen/differential-dataflow.git", branch = "add-serde-fields" }

# Import a local differential-datalog library.
# types = { path = "../differential-datalog/rust/template/types" }
# differential_datalog = { path = "../differential-datalog/rust/template/differential_datalog" }
differential_datalog = { path = "ddlog_examples/formula2ddlog/formula2ddlog_ddlog/differential_datalog" }
# differential_datalog_test = { path = "../differential-datalog/rust/template/differential_datalog_test" }
# ddlog_lib = { path = "../differential-datalog/lib"}
# ddlog_derive = { path = "ddlog_examples/formula2ddlog/formula2ddlog_ddlog/differential-datalog/rust/template/ddlog_derive" }

rand = "0.4"
enum_dispatch = "0.3.1"
indexmap = "1.6"
nom = "5"
num = { version = "0.3", features = ["serde"] }
ordered-float = { version = "2.0.0", features = ["serde"] }
im = { version = "14", features = ["serde"] }
# serde = { version = "1.0", features = ["derive", "rc", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
erased-serde = "0.3"

readonly = "0.2"
petgraph = "0.5"
num-iter = "0.1"
derivative = "2"
# z3 = {version="0.5.0", features = ["static-link-z3"]}
# fasthash = "0.4"
fnv = "1"
weak-table = "0.3.0"
lazy_static = "1.4.0"
# clap = "2.33.0"
# clap v3 is not quite compatible with clap v2 while the documentation is still on v2.
# Here we use the github repo to get the latest clap v3.  
# clap = { git = "https://github.com/clap-rs/clap" }
clap = "3.0.0-beta.1"

# [lib]
# name = "differential_formula"
# crate-type = ["cdylib"]

# [dependencies.pyo3]
# version = "0.13.2"
# features = ["extension-module"]
