[package]
name = "differential-formula"
version = "0.1.0"
authors = ["Qishen Zhang <qishen23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
timely = "0.10"
timely_sort = "0.1.6"
differential-dataflow = "0.10"
rand = "0.4"
enum_dispatch = "0.2.0"