[package]
name = "ddengine"
version = "0.1.0"
authors = ["Qishen Zhang <qishen23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.0.2"
pyo3 = { version = "0.8.0", features = ["extension-module"] }
timely = "0.10"
timely_sort = "0.1.6"
differential-dataflow = "0.10"

[lib]
name = "ddengine"
crate-type = ["cdylib"]
