[package]
name = "ddengine"
version = "0.1.0"
authors = ["Qishen Zhang <qishen23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.0.2"
pyo3 = { version = "0.8.0", features = ["extension-module"] }
timely = "0.10"
timely_sort = "0.1.6"
differential-dataflow = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_traitobject = "0.1.7"
abomonation = "0.7"
abomonation_derive = "0.3"
enum_dispatch = "0.1.4"
indexmap = "1.3.0"

[lib]
name = "ddengine"
crate-type = ["cdylib"]
