[package]
name = "formula2ddlog_lib"
version = "0.1.0"
authors = ["Qishen Zhang <qishen23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.4"
differential_datalog = {path = "../formula2ddlog_ddlog/differential_datalog"}
formula2ddlog = {path = "../formula2ddlog_ddlog/"}
types = {path = "../formula2ddlog_ddlog/types"}